syntax = "proto3";
package  launchpadpackage;

message Worker {
  string stashAccount = 1;
  string controllerAccount = 2;
  string payout = 3;
  string status = 4;
  bool   stakeEnough = 5;
  string accumulatedStake = 6;  // bignum
  string profitLastMonth = 7;  // bignum
  string workerStake = 8;  // bignum
  string userStake = 9;  // bignum
  int32  stakeAccountNum = 10;
  float  commission = 11;
  int32  taskScore = 12;
  int32  machineScore = 13;
  double apy = 14;
  int32  diffToMinStake = 15;
  double stakeToMinApy = 16;
}

message RoundInfo {
  int32 total = 1;
  repeated Worker workers = 2;
}

message Globalstatistics {
  float apy = 1;
  int32 round = 2;
  int32 roundCycleTime = 3;
  int32 onlineWorkerNum = 4;
  int32 workerNum = 5;
  string stakeSum = 6;  //bignum
  float stakeSupplyRate = 7;
  string avgStake = 8;  //bignum
  string rewardLastRound = 9;
}

message Status {
  int32 success = 1;
  optional string msg = 2;
}

//worker
message WorkerRequest {
  int32 page = 1;
  int32 pageSize = 2;
  bool  filterRuning = 3;
  bool  filterStakeEnough = 4;
  bool  filterCommissionLessThen = 5;
  string sortFieldName = 6;
  repeated string filterStashAccounts = 7;
}

message WorkerResponse {
  Status status = 1;
  RoundInfo result = 2;
}

//GlobalStatistics
message GlobalStatisticsRequest {
}

message GlobalStatisticsResponse {
  Status status = 1;
  Globalstatistics result = 2;
}

//stakes
message AvgStake {
  repeated string avgStake = 1;  //bignum
}

message AvgStakeRequest {
}

message AvgStakeResponse {
  Status status = 1;
  AvgStake result = 2;
}

//stakeinfo
message StakeInfo {
  repeated string accumulatedStake = 1;
  repeated string workerStake = 2;
}

message StakeInfoRequest {
  string stashAccount = 1;
}

message StakeInfoResponse {
  Status status = 1;
  StakeInfo result = 2;
}

//rewardpenalty
message RewardPenalty {
  repeated string reward = 1;  
  repeated string penalty = 2;  
}

message RewardPenaltyRequest {
  string stashAccount = 1;
}

message RewardPenaltyResponse {
  Status status = 1;
  RewardPenalty result = 2;
}

//avgreward
message AvgReward {
  repeated string avgreward = 1;  
}

message AvgRewardRequest {
  string stashAccount = 1;
}

message AvgRewardResponse {
  Status status = 1;
  AvgReward result = 2;
}

//apy
message Apy {
  repeated float apy = 1;
}
message ApyRequest {
  string stashAccount = 1;
}
message ApyResponse {
  Status status = 1;
  Apy result = 2;
}

//commission
message Commission {
  repeated float commission = 1;
}
message CommissionRequest {
  string stashAccount = 1;
}
message CommissionResponse {
  Status status = 1;
  Commission result = 2;
}

//common
message CommonRequest {
  oneof request {
    WorkerRequest workerRequest = 1;
    GlobalStatisticsRequest globalStatisticsRequest = 2;
    AvgStakeRequest avgStakeRequest = 3;
    StakeInfoRequest stakeInfoRequest = 4;
    RewardPenaltyRequest rewardPenaltyRequest = 5;
    AvgRewardRequest avgRewardRequest = 6;
    ApyRequest apyRequest = 7;
    CommissionRequest commissionRequest = 8;
  }
}

message CommonResponse {
  Status status = 1;
}